--- a/mp.htm
+++ b/mp.htm
@@ -80,11 +80,11 @@
         <div class="words_deco wow fadeInLeft" data-wow-delay="2.5s">裝飾圖</div>
         <div class="container">
           <h2 class="block_title">處長<span>的話</span></h2>
-          <div class="text">
+          <div class="text wow fadeIn">
             <p>回顧過往歲月，本處始終秉持著「瞭解．關心．服務．尊重」之宗旨，分擔中小企業營運之艱難，並恪盡職守承擔長官賦予之任務。今（109）年雖逢新冠肺炎疫情，惟在長官的帶領以及全體同仁的齊心努力下，本處協助許多中小企業突破營運難關，成為他們最強而有力的後盾，亦成功為我國經濟發展穩固基石。</p>
             <p>在本處邁向成立40週年之際，期待透過舉辦祝福活動，讓全體同仁一同歡慶，亦希望透過線上專區報導之方式，展現本處歷年輔導企業之成果，並以「飛躍40．締造新史」作為本次活動之主題，以期鼓舞同仁懷抱著創新飛躍之思想貼近產業脈動、秉持著飛躍難關之精神打造企業優質營運環境，齊心與我國中小企業共同締造光輝之歷史新頁。</p>
           </div>
-          <div class="pic">
+          <div class="pic wow fadeIn" data-wow-delay=".5s">
             <img src="images/mp/chairman.jpg" alt="">
           </div>
           <div class="more">
@@ -96,7 +96,7 @@
         <div class="container">
           <h2 class="block_title">輔導<span>成果</span></h2>
           <ul>
-            <li>
+            <li class="wow fadeInRight" data-wow-delay="0s">
               <a href="">
                 <span class="pic">
                   <img src="https://via.placeholder.com/728x90.png" alt="">
@@ -105,7 +105,7 @@
                 <span class="text">中小企業創新育成協調中心計畫</span>
               </a>
             </li>
-            <li>
+            <li class="wow fadeInRight" data-wow-delay=".5s">
               <a href="">
                 <span class="pic">
                   <img src="images/mp/pic2.jpg" alt="">
@@ -114,7 +114,7 @@
                 <span class="text">創業楷模選拔暨頒獎表揚活動計畫</span>
               </a>
             </li>
-            <li>
+            <li class="wow fadeInRight" data-wow-delay="1s">
               <a href="">
                 <span class="pic">
                   <img src="https://via.placeholder.com/500x500.png" alt="">
@@ -139,35 +139,35 @@
               <!--選到的頁籤項目-->
               <div class="tabContent">
                 <ul>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="0s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event1.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">1推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay=".5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event2.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">2推動中小企業城鄉創生轉型輔導計畫(SBTR)推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event3.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">3推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1.5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event4.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">4推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="2s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event5.jpg" alt=""></span>
                       <time>109-12-07</time>
@@ -180,35 +180,35 @@
               <h2 class="tabItem"><a href="#">108年</a></h2>
               <div class="tabContent">
                 <ul>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="0s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event1.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">1推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay=".5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event2.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">2推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">2推動中小企業城鄉創生轉型輔導計畫(SBTR)推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event3.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">3推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1.5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event4.jpg" alt=""></span>
                       <time>109-12-07</time>
                       <span class="title">4推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="2s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event5.jpg" alt=""></span>
                       <time>109-12-07</time>
@@ -221,39 +221,39 @@
               <h2 class="tabItem"><a href="#">107年</a></h2>
               <div class="tabContent">
                 <ul>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="0s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event1.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">1推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay=".5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event2.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">2推動中小企業城鄉創生轉型輔導計畫(SBTR)推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event3.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">3推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1.5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event4.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">4推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="2s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event5.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">5推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
                 </ul>
@@ -262,39 +262,39 @@
               <h2 class="tabItem"><a href="#">106年</a></h2>
               <div class="tabContent">
                 <ul>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="0s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event1.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">1推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay=".5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event2.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">2推動中小企業城鄉創生轉型輔導計畫(SBTR)推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event3.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">3推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="1.5s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event4.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">4推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
-                  <li>
+                  <li class="wow fadeIn" data-wow-delay="2s">
                     <a href="#">
                       <span class="pic"><img src="images/mp/event5.jpg" alt=""></span>
                       <time>109-12-07</time>
-                      <span class="title">推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
+                      <span class="title">5推動中小企業城鄉創生轉型輔導計畫(SBTR)</span>
                     </a>
                   </li>
                 </ul>
@@ -308,10 +308,10 @@
         <div class="video_deco wow fadeInLeft" data-wow-delay=".5s">裝飾圖</div>
         <div class="container">
           <h2 class="block_title">紀念<span>影片</span></h2>
-          <div class="video img-container">
+          <div class="video img-container wow fadeIn">
             <iframe width="465" height="270" src="https://www.youtube.com/embed/ecCtegZ7G-Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <div class="text">
+          <div class="text wow fadeIn" data-wow-delay=".5s">
             <a href="">
               <span class="title">The Pride of Taiwan｜臺灣驕傲</span>
               <p>
@@ -415,7 +415,16 @@
   <script src="js/customize.js"></script>
   <script src="vendor/wow.min.js"></script>
   <script>
-    new WOW().init();
+    wow = new WOW(
+    {
+boxClass:     'wow',      // default
+animateClass: 'animated', // default
+offset:       0,          // default
+mobile:       false,       // default
+live:         true        // default
+}
+)
+    wow.init();
   </script>
 </body>
 
