--- a/cp.htm
+++ b/cp.htm
@@ -78,6 +78,8 @@
             <div class="publish_time">
               <span>發布日期：</span><time>2019-01-01</time>
             </div>
+            <div class="counter"><span>點閱人次：</span>21
+            </div>
             <!-- 文字大小 -->
             <div class="font_size">
               <span>字型大小：</span>
