--- a/mp.htm
+++ b/mp.htm
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="zh-Hant" class="no-js">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>經濟部中小企業處40週年</title>
-    <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
+  <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
   <![endif]-->
@@ -17,6 +18,7 @@
   <!-- favicon -->
   <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
+
 <body>
   <!-- 直接跳主內容區 -->
   <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
@@ -61,12 +63,12 @@
     <div id="center" class="main">
       <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
       <section class="hero_block">
-        <div class="hero_highlight"><img src="images/mp/40.png" alt=""></div>
+        <!-- <div class="hero_highlight"><img src="images/mp/40.png" alt=""></div> -->
         <div class="hero_title wow fadeIn" data-wow-delay="1s"><img src="images/mp/slogan.png" alt=""></div>
-        <div class="hero_text wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+        <!-- <div class="hero_text wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
           <p>經濟部中小企業處成立於民國70年，肩負著與中小企業攸關之政策規劃、經營輔導、創業育成、知識資訊及財務融通等業務。</p>
           <p>回顧過往歲月，本處始終秉持著「瞭解．關心．服務．尊重」之宗旨，分擔中小企業營運之艱難，並恪盡職守承擔長官賦予之任務。</p>
-        </div>
+        </div> -->
         <div class="hero_pic wow slideInRight" data-wow-duration="1s" data-wow-delay=".5s"><img src="images/mp/man.png" alt=""></div>
         <div class="hero_para1 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">裝飾圖1</div>
         <div class="hero_para2 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">裝飾圖2</div>
@@ -240,7 +242,7 @@
             </section>
           </div>
         </div>
-      </section>  
+      </section>
       <section class="video_block">
         <div class="video_deco wow fadeInLeft" data-wow-delay=".5s">裝飾圖</div>
         <div class="container">
@@ -252,11 +254,11 @@
             <a href="">
               <span class="title">The Pride of Taiwan｜臺灣驕傲</span>
               <p>
-                我們，在摸索創新的路上，不輕言放棄 <br>
-                我們，在創業精神中，注入新的科技<br>
-                我們，扛起對未來的想像，讓創意加速奔騰<br>
-                與臺灣企業共創新環境<br>中小企業處與你一起成長<br>
-                微小卻偉大<br>我們 - 中小企業，臺灣驕傲！
+                我們，在摸索創新的路上，不輕言放棄 <br> 我們，在創業精神中，注入新的科技
+                <br> 我們，扛起對未來的想像，讓創意加速奔騰
+                <br> 與臺灣企業共創新環境
+                <br>中小企業處與你一起成長<br> 微小卻偉大
+                <br>我們 - 中小企業，臺灣驕傲！
               </p>
             </a>
           </div>
@@ -340,27 +342,31 @@
   <!-- JQ -->
   <script src="js/jquery-3.5.1.min.js"></script>
   <!-- 外掛 plugin js -->
-  <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
-  <script src="vendor/slick/slick.min.js "></script><!-- slick -->
-  <script src="vendor/slick/slick-lightbox.js "></script><!-- slick lightbox -->
-  <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
-  <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
-  <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
+  <script src="vendor/jquery.easing.min.js"></script>
+  <!-- ease -->
+  <script src="vendor/slick/slick.min.js "></script>
+  <!-- slick -->
+  <script src="vendor/slick/slick-lightbox.js "></script>
+  <!-- slick lightbox -->
+  <script src="vendor/lazyload/lazyload.js"></script>
+  <!-- lazyload -->
+  <script src="vendor/picturefill/picturefill.min.js" async></script>
+  <!-- picturefill -->
+  <script src="vendor/scrolltable/jquery.scroltable.min.js"></script>
+  <!-- scrolltable -->
   <!-- hyUI -->
   <script src="js/hyui.js"></script>
   <!-- 客製js -->
   <script src="js/customize.js"></script>
   <script src="vendor/wow.min.js"></script>
   <script>
-    wow = new WOW(
-    {
-boxClass:     'wow',      // default
-animateClass: 'animated', // default
-offset:       0,          // default
-mobile:       false,       // default
-live:         true        // default
-}
-)
+    wow = new WOW({
+      boxClass: 'wow', // default
+      animateClass: 'animated', // default
+      offset: 0, // default
+      mobile: false, // default
+      live: true // default
+    })
     wow.init();
   </script>
 </body>
